--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,5 @@
 baseURL = 'https://example.org/'
-languageCode = 'en-us'
-title = 'My New Hugo Site'
+languageCode = 'zh-CN'
+defaultContentLanguage = 'zh'
+title = 'Hugo Blog'
 theme = 'hugo-theme-relearn'
